--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                 <div id="article-main-content2">
                     <div class="row">
                     <div class="col-lg-6 col-lg-push-6 text-center-tablet text-center">
-                        <img alt="Mobile App Graphic" src="https://www.solodev.com/assets/landing-page/mobile-app-graphic.png">
+                        <img alt="VMAS" src="https://www.solodev.com/assets/landing-page/mobile-app-graphic.png">
                     </div>
                     <div class="col-lg-6 col-lg-pull-6">
                         <p class="ct-u-paddingBottom20">Alright kasi LSA is a type of assessment that plays a huge role olin our profession.</p>
