--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,7 @@
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 	<link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
 </head>
-<body>
+<body background="assets/images/bg.jpg">
   <app-root></app-root>
 </body>
 </html>
