--- a/src/index.html
+++ b/src/index.html
@@ -15,4 +15,20 @@
 <body background="assets/images/bg.jpg">
   <app-root></app-root>
 </body>
+<footer>
+  <div class="blue-part">
+    <img src="../assets/images/testimonials.png" class="testimony">
+    <img src="../assets/images/Boy.png" class="boy-testimony">
+    <img src="../assets/images/girl.png" class="girl-testimony">
+  </div>
+  <div class="center-part">
+    <img src="../assets/images/Straight dots.png" class="straight-dots">
+    <img src="../assets/images/Dots.png" class="dotted">
+    <button onclick="location.href='#'" type="button" class="directory"></button>
+    <img src="../assets/images/Protractor.png" class="sun">
+  </div>
+  <div class="white-part">
+    <img src="../assets/images/Blue wavy.png" class="blue-waves">
+  </div>
+</footer>
 </html>
